# stargraph

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TODO.md  mkdocs.yml  pyproject.toml  release-please-config.json  robots.txt
.forge/: anti-cheat.yaml  prd.json  tests-locked.json
.forge/plans/: T04.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dco.yml  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: add-to-project.yml  autofix.yml  ci.yml  community-label.yml  dependabot-auto-merge.yml  docs-deploy.yml  label-sync.yml  pr-title.yml  release-please.yml  release.yml
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4/concepts/: index.html
0.4/engine/: index.html
0.4/getting-started/: index.html
0.4/how-to/: index.html
0.4/knowledge/: index.html
0.4/reference/: openapi.json
0.4/search/: search_index.json
0.4/tutorials/: index.html
0.5/: 404.html  CNAME  index.html  llms.txt  sitemap.xml
0.5/architecture-map/: index.html
0.5/concepts/: index.html
0.5/engine/: index.html
0.5/getting-started/: index.html
0.5/how-to/: index.html
0.5/knowledge/: index.html
0.5/reference/: openapi.json
0.5/search/: search_index.json
0.5/tutorials/: index.html
demos/: CATALOG.md  README.md  __init__.py
demos/cve_remediation/: .env.example  README.md  RUNNING.md  __init__.py  bootstrap.py  capabilities.py  docker-compose.yml  krakntrust.py  live_test.py  nautilus.yaml  run_demo.py  serve_cve_rem.py  sign_packs.py
demos/everything-demo/: README.md
demos/graph_viewer/: serve_graph_viewer.py
demos/internal-docs-qa/: internal-docs-qa.md
demos/pr-review/: pr-review.md
demos/pv-case-manager/: pv-case-manager.md
demos/regwatch/: regwatch.md
demos/sentinel_dark_watch/: .env.example  Justfile  __init__.py  ais_ingest.py  bootstrap.py  capabilities.py  db.py  docker-compose.yml  geo.py  nautilus.yaml  schema.sql  serve_sdw.py
demos/soc-triage/: .gitignore  README.md  serve_soc.py  soc-triage.md
demos/support-veto/: support-veto.md
design-docs/: stargraph-adrs.md  stargraph-concepts.md  stargraph-design.md  stargraph-dir-plugins.md  stargraph-facts.md  stargraph-forward-compat.md  stargraph-md-skills.md  stargraph-plugin-api.md  stargraph-roadmap.md  stargraph-typed-when.md
docs/: AGENTS.md  architecture-map.md  getting-started.md  index.md  llms.txt  robots.txt
docs/concepts/: index.md  ir.md  plugins.md  provenance.md
docs/engine/: checkpointer.md  counterfactual.md  index.md  replay.md
docs/explanation/: fathom-gaps.md  versioning.md
docs/guides/: air-gap-deployment.md
docs/how-to/: add-mcp-server.md  add-nautilus-source.md  add-rule-pack.md  add-store-provider.md  add-trigger.md  bosun-pack.md  build-agent.md  build-graph.md  build-skill.md  checkpointer.md  index.md  write-tool-plugin.md
docs/knowledge/: air-gap.md  cypher-subset.md  index.md  memory.md  reference-skills.md  retrieval.md  skills.md  stores.md
docs/reference/: cli.md  hookspecs.md  ir-schema.md  openapi.json  plugin-manifest.md  signing.md  skills.md  tools.md  v1-limits.md
docs/security/: sign-off.md  threat-model.md
docs/serve/: api.md  artifacts.md  bosun.md  cli.md  hitl.md  nautilus.md  overview.md  profiles.md  runs.md  scheduler.md  ws.md
docs/tutorials/: agent-with-retrieval.md  fathom-rules.md  first-graph.md  hitl-graph.md  index.md  ml-node-graph.md  serve-and-replay.md
examples/: AGENTS.md  README.md  hello.yaml  pipeline.yaml
scripts/: build_draft7.py  check_changelog_touched.py  check_version_sync.py  lineage_audit.py  nodesmith_optimize.py  regen_openapi.py  regen_schemas.py  rename_to_stargraph.sh  shipwright_run.py  sign_bosun_packs.py
specs/cve-rem-node-ui/: .progress.md  tasks.md
specs/demo-sentinel-dark-watch-1/: .progress-task-40.md  .progress-task-41.md  .progress-task-5.md  .progress-task-6.md  .progress-task-8.md  .progress-task-9.md  .progress.md  design.md  requirements.md  research.md  tasks.md
src/harbor/: __init__.py
src/stargraph/: AGENTS.md  __init__.py
tests/: AGENTS.md  conftest.py
tests/fixtures/: ansi.py  lm_stub.py  mutation.yaml  nautilus_stub.py  pii_corpus.txt  sample-graph-phase3.yaml  sample-graph-phase4.yaml  sample-graph-phase5.yaml  sample-graph.yaml  sample_state.py  smith_testkit.py  stub_mcp_server.py  training-subgraph.yaml  triage_no_nautilus.yaml  triage_stub_broker.yaml
tests/integration/: conftest.py  test_autoresearch_provenance_end_to_end.py  test_autoresearch_reference_skill.py  test_autoresearch_skill.py  test_branch_lifecycle_facts.py  test_capability_default_deny.py  test_chained_audit_log.py  test_cli_counterfactual.py  test_cli_inspect.py  test_cli_run.py  test_cli_serve.py  test_clips_facts_roundtrip.py  test_consolidation_cadence_batch.py  test_consolidation_cadence_streaming.py  test_consolidation_provenance_lineage.py  test_consolidation_salience_gating.py  test_consolidation_typed_delta.py  test_counterfactual_diff.py  test_counterfactual_e2e.py  test_counterfactual_invariant.py  test_custom_store_provider.py  test_cypher_subset.py  test_cypher_write_keyword_scan.py  test_determinism_shim.py  test_dspy_adapter_basic.py  test_dspy_bind.py  test_dspy_loud_fallback.py  test_embed_hash_drift_gate.py  test_episodic_widening_read.py  test_examples.py  test_factstore_fathom_provenance.py  test_health_warns_on_nfs.py  test_hybrid_search_rrf.py  test_interrupt_timeout.py  test_jsonl_audit_log.py  test_kg_fact_promotion_rule.py  test_kg_promotion_counterfactual.py  test_knowledge_phase3_ve.py  test_knowledge_phase5_final.py  test_knowledge_poc_e2e.py  (+53 more)
tests/migration/: test_foundation_v0_1_to_engine_v0_2.py
tests/perf/: test_knowledge_perf.py  test_nautilus_workload.py  test_per_node_overhead.py  test_sqlite_checkpoint.py  test_structural_hash_perf.py
tests/property/: __init__.py  test_cypher_linter_idempotent.py  test_ir_roundtrip.py  test_jcs_canonical.py  test_merge_strategy_associativity.py  (+6 more)
(+1513 files in other folders)
