[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "stargraph"
version = "0.4.0"
description = "Stateful agent-graph framework with deterministic governance via Fathom"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Kraken Networks", email = "info@krakennetworks.com" }]
keywords = ["agents", "graph", "ir", "fathom", "governance", "ai", "policy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.9",
    "pluggy>=1.5",
    "prompt-toolkit>=3.0.50",
    "fathom-rules>=0.5.0",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "anyio>=4.3",
    "uuid-utils>=0.8",
    "dspy>=3.0.4,<3.4",
    "mcp>=1.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "rfc8785>=0.1.4,<0.2",
    "orjson>=3.10",
    "typer>=0.12",
    "jsonpatch>=1.33",
    "cryptography>=47.0.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "cronsim>=2.6",
    "pyjwt[crypto]>=2.8",
    "nautilus-rkm>=0.1.5",
    "blake3>=0.4",
    "argon2-cffi>=23.1",
    "jinja2>=3.1.6",
    "graphglot>=0.11.0",
    "redis>=7.4.0",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn",
    "xgboost>=2.1",
    "onnxruntime>=1.18",
    "skops>=0.10",
    "joblib",
]
# Note on `ryugraph>=25.9.2,<26`: RyuGraph is the community fork of Kuzu
# (predictable-labs/ryugraph) after the Kuzu GitHub repo was archived
# 2025-10-10 following Apple's acquisition of Kuzu Inc. RyuGraph keeps
# the same Python API surface (Database / AsyncConnection / QueryResult)
# so the swap was a one-module rename behind GraphStore (FR-11, AC-12.1).
# Calver-pinned: floor at the version we swapped on, ceiling at the
# next major calver bump.
stores = [
    "lancedb>=0.30.2,<0.40",
    "ryugraph>=25.9.2,<26",
    "pyarrow>=15",
]
sdw = [
    "ultralytics>=8.3",  # 8.3+ includes YOLO11 model architecture despite 8.x version numbering
    "torch>=2.0",
    "torchvision>=0.15",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "streamlit>=1.30",
    "streamlit-folium>=0.20",
    "folium>=0.15",
    "websockets>=12.0",
    "Pillow>=10.0",
    "asyncpg>=0.29",
    "plotly>=5.18",
]
skills-rag = [
    "sentence-transformers>=5.0,<6",
    "huggingface_hub>=0.25",
    # Declare torch as a direct dep so the [tool.uv.sources] CPU pin
    # below applies (uv <0.9 only honors the source map for direct
    # deps, not transitives pulled by sentence-transformers).
    "torch>=2.1",
]

[project.urls]
Homepage = "https://stargraph.krakn.ai"
Repository = "https://github.com/KrakenNet/stargraph"
Documentation = "https://stargraph.krakn.ai"
Changelog = "https://github.com/KrakenNet/stargraph/blob/main/CHANGELOG.md"
Issues = "https://github.com/KrakenNet/stargraph/issues"

[project.scripts]
stargraph = "stargraph.cli:main"

# Public extension groups — plugins register here
[project.entry-points."stargraph"]
# (reserved — Stargraph itself does not register here; downstream plugins use it
#  for the stargraph_plugin manifest entry-point)

# Note: stargraph.{tools,skills,stores,packs,mcp_adapters} have NO core entries —
# they are entirely populated by external plugin distributions. The
# ``stargraph.mcp_adapters`` group is the discovery path for MCP-server adapter
# plugins (FR-25, design §3.3.2). Each plugin's ``register_mcp_adapters()``
# hookimpl returns a list of :class:`stargraph.plugin.types.MCPAdapterSpec`.

# Built-in trigger plugins (design §6.3, FR-3/4/5). Cron + Webhook land in
# tasks 2.10 / 2.11; manual is the simplest baseline (CLI + HTTP convergence).
[project.entry-points."stargraph.triggers"]
manual = "stargraph.triggers.manual:ManualTrigger"
cron = "stargraph.triggers.cron:CronTrigger"
webhook = "stargraph.triggers.webhook:WebhookTrigger"

# Built-in Nautilus tool plugin (design §8.2, FR-45). Registry-discoverable
# `@tool`-decorated coroutine that calls the lifespan-singleton Broker.
[project.entry-points."stargraph.tools"]
broker_request = "stargraph.tools.nautilus.broker_request:broker_request"
servicenow_create_change_request = "stargraph.tools.servicenow.create_change_request:create_change_request"
servicenow_cmdb_query_software = "stargraph.tools.servicenow.cmdb_query_software:cmdb_query_software"
servicenow_cmdb_traverse_runs_on = "stargraph.tools.servicenow.cmdb_traverse_runs_on:cmdb_traverse_runs_on"
servicenow_cmdb_resolve_hosts = "stargraph.tools.servicenow.cmdb_resolve_hosts:cmdb_resolve_hosts"

# Built-in reranker plug-ins discoverable through stargraph.stores._rerank_loader.
# RRFReranker is the always-available default; cross-encoder requires the
# ``skills-rag`` extra (sentence-transformers + torch) at runtime.
[project.entry-points."stargraph.rerankers"]
cross-encoder = "stargraph.stores.rerankers:CrossEncoderReranker"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "pre-commit>=3.7",
    "codespell>=2.2",
    "vcrpy>=6.0",
    "pytest-recording>=0.13",
    "testcontainers[postgresql]>=4.0",
    "testcontainers[neo4j]>=4.0",
    "trustme>=1.2",
    "time-machine>=3.2.0",
    "pytest-benchmark>=5.2.3",
    "skl2onnx>=1.17",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-redirects>=1.2",
    "mike>=2.1",
]
release = [
    "build>=1.2",
    "twine>=5.0",
]

# Force the CPU-only PyTorch wheels (~200 MB) instead of the full CUDA
# stack (~3 GB of nvidia-* wheels) that sentence-transformers' transitive
# torch dependency would otherwise resolve to. CI runners have no GPU and
# the CPU wheel is functionally equivalent for the test/lint surface.
#
# Implementation: pin torch (and the typical torch-family transitive
# deps) to the PyTorch CPU index via [tool.uv.sources]. Identical intent
# to `[tool.uv].torch-backend = "cpu"` (added in uv 0.9.0) but works on
# every uv version we still support.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]

[tool.hatch.build.targets.wheel]
packages = ["src/stargraph"]

[tool.hatch.build.targets.sdist]
include = ["src/stargraph", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "ASYNC", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts allowed in tests

[tool.pyright]
strict = ["src/stargraph", "tests"]
include = ["src/stargraph", "tests"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --cov=stargraph --cov-branch -ra"
# Third-party deprecations we don't own. Keep this list narrow: each
# entry must name an external package whose deprecation we can't fix
# upstream, otherwise warnings remain visible.
filterwarnings = [
    "ignore:The 'prefix' argument in InputField/OutputField is deprecated:DeprecationWarning:dspy.*",
    "ignore::DeprecationWarning:nautilus.*",
    # Pydantic v2 emits this for StrEnum fields whose `value` is dumped
    # under `mode='json'`; demo state models use StrEnum heavily and
    # the projection is intentional. Filter is scoped to pydantic only.
    "ignore:.*StrEnum.*:DeprecationWarning:pydantic.*",
]
markers = [
    "unit: fast unit tests (no external deps)",
    "integration: requires Fathom CLIPS / external services",
    "slow: long-running tests",
    "knowledge: stargraph-knowledge subsystem tests (stores, skills, retrieval, memory)",
    "serve: stargraph-serve subsystem tests (umbrella for serve-related markers)",
    "websocket: WebSocket / streaming tests",
    "api: FastAPI HTTP API tests",
    "trigger: trigger plugin tests (manual/cron/webhook)",
    "scheduler: scheduler / queue tests",
]

[tool.coverage.run]
source = ["stargraph"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]
